@@ -1,3 +1,8 @@
+2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* Makefile.am (EXTRA_DIST): Added debian subdirectory to
+	distribution.
+
 2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Release 1.0
